# carbonsim

./: README.md  pyproject.toml
carbonsim/: __init__.py  config.py  drift.py  logging_utils.py  models.py  simulator.py
carbonsim/plots/: __init__.py  generator.py  plots_generator.py  plots_utils.py
carbonsim/writer/: __init__.py  files_refactors.py
codecarbon/: __init__.py
